@@ -5,7 +5,7 @@ import java.util.regex.Pattern;
 import net.sourceforge.pmd.PropertyDescriptor;
 import net.sourceforge.pmd.lang.java.ast.ASTLiteral;
 import net.sourceforge.pmd.lang.java.rule.AbstractJavaRule;
-import net.sourceforge.pmd.properties.BooleanProperty;
+import net.sourceforge.pmd.lang.rule.properties.BooleanProperty;
 
 public class AvoidUsingOctalValuesRule extends AbstractJavaRule {
 
