@@ -1,4 +1,4 @@
-package net.sourceforge.pmd.properties;
+package net.sourceforge.pmd.lang.rule.properties;
 
 import java.util.Map;
 
